# magic-eye-project

./: .gitignore  pyproject.toml  readme.md  requirements.txt
app/: streamlit_app.py
scripts/: generate_demo_assets.py
src/magic_eye/: __init__.py  cli.py  depth_ai.py  depth_sculpt.py  io.py  patterns.py  stereogram.py
tests/: __init__.py  test_bidirectional.py  test_depth_smoothing.py  test_io.py  test_pattern.py  test_stereogram.py  test_test_depth_remap.py
